--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -13,20 +12,24 @@ header {
     background-repeat: repeat;
 }
 
+body {
+    width: 100vw;
+}
+
 section {
     margin-top: 20px;
 }
 
 .content {
-    padding: 0 10px;
+    margin: 0 10% 0;
 }
 
 .logo {
     height: 50%;
-    padding: 15px;
+    padding-bottom: 10px;
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: calc(100vw - 90%);
 }
 
 .logo img {
@@ -53,7 +56,8 @@ section {
 }
 
 .photo {
-    display: inline-block;
+    float: left;
+    margin-right: 5px;
     height: 100%;
 }
 
@@ -68,7 +72,6 @@ section {
 
 ul {
     list-style-position: inside;
-/*    senno' puntino di "li" mi esce fuori dal parent container   */
 }
 
 /*  ----    TABLE START  ----  */
